# tools-sync-action

./: .flake8  .gitignore  .gitlab-ci.yml  .pylintrc  Dockerfile  Pipfile  README.md  action.yml  dev-sync.py  env.dist  launch.sh  pip-requirements.txt  poetry-requirements.txt  productboard.py  pyproject.toml  renovate.json  setup.cfg
.github/: dependabot.yml
.github/workflows/: checks.yml  zizmor.yml
typings/: semver.pyi
