[project]
name = "toolsync"
version = "0.1.0"
description = "sync issue & deploy status between external tools"
requires-python = ">=3.14"
readme = "README.md"
dependencies = [
    "click==8.3.2",
    "pygithub==2.9.1",
    "python-dotenv==1.2.2",
    "httpx==0.28.1",
    "semver==3.0.4",
]

[dependency-groups]
dev = ["ruff==0.15.10"]

[tool.uv]
required-version = ">=0.8"

[tool.uv.build-backend]
module-name = ["dev-sync.py"]
module-root = ""

[tool.ruff]
line-length = 120

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
ignore = [
    # Conflicting with formatting
    "COM812", # Missing ending comma, conflicts with black magic trailing comma
    "ISC001", # Conflicts with ruff format command
    # Disabled rulesets we don't care about those
    "BLE",    # Blind exception catching
    "C90",    # Complexity
    "D1",     # missing docstrings
    "D211",
    "D213",
    "ANN204", # Return annotations for special methods
    "ANN401", # Forbid Any
    "N801",
    "N802",
    "N803",
    "N805",
    "N806",
    "N811",
    "N812",
    "N814",
    "N815",
    "N816",
    "N818",
    "N999",   # Various naming conventions around case
    "PLR09",  # Too many arguments
    "S101",   # Use of assert ..
    "D203",   # 1 blank line required after class docstring
]
select = ["ALL"]

[tool.pyright]
typeCheckingMode = "strict"

deprecateTypingAliases = true
reportCallInDefaultInitializer = true
reportImplicitOverride = true
reportImplicitStringConcatenation = true
reportPropertyTypeMismatch = true
reportUnnecessaryTypeIgnoreComment = true
reportShadowedImports = true
reportMissingTypeStubs = false
reportUnreachable = true
